fix: AnnotationHandlerAdapterTest 깨지는 문제 수정